Fixed some images to not display the template

--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Software developer out of the Netherlands"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Scraayp | Portfolio</title>
     <meta
       name="description"
-      content="Self Developed personal website build with React.js"
+      content="Software developer out of the Netherlands"
     />
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Scraayp | Portfolio" />
     <meta
       itemprop="description"
-      content="Self Developed personal website build with React.js"
-    />
-    <meta
-      itemprop="image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="Software developer out of the Netherlands"
     />
 
     <!-- Facebook Meta Tags -->
@@ -33,11 +29,7 @@
     <meta property="og:title" content="Scraayp | Portfolio" />
     <meta
       property="og:description"
-      content="Self Developed personal website build with React.js"
-    />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="Software developer out of the Netherlands"
     />
 
     <!-- Twitter Meta Tags -->
@@ -45,11 +37,7 @@
     <meta name="twitter:title" content="Scraayp | Portfolio" />
     <meta
       name="twitter:description"
-      content="Self Developed personal website build with React.js"
-    />
-    <meta
-      name="twitter:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
+      content="Software developer out of the Netherlands"
     />
   </head>
 
